@@ -1,3 +1,10 @@
+2011-03-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c,
+	  src/z80/ralloc.c,
+	  Fixes for the exact cost function.
+
 2011-03-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/ralloc.c,
